# icecards

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
sample-data/: adjectives.csv  dictionary.json  nouns.csv  verbs.csv  wordlist.txt
src/: bindata.rs  dictionary.rs  main.rs
