[package]
name = "binscrape"
version = "0.1.0"
authors = ["Seth Morabito <web@loomcom.com>"]
edition = "2018"

[dependencies]
clap = "2"
csv = "1.1"
genanki-rs = "0.1"
rand = "0.8"
regex = "1.5"
reqwest = "0.11"
select = "0.6.0-alpha.1"
serde_json = "1.0"
serde = "1.0"
tokio = { version = "1.6", features = ["full"] }