[package]
name = "icecards"
version = "0.1.0"
authors = ["Seth Morabito <web@loomcom.com>"]
edition = "2018"

[dependencies]
clap = "2"
csv = "1.1"
directories-next = "2.0"
genanki-rs = "0.1"
reqwest = "0.11"
tempfile = "3.2"
thiserror = "1.0"
tokio = { version = "1.6", features = ["full"] }
zip = "0.5"